[package]
name = "oauth-github-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest", "rustls-tls"]
pkce-plain = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
oauth2 = "3.0"
base64 = "0.13"
thiserror = "1.0"
http = "0.2"
rand = "0.8"
reqwest = { version = "0.11", optional = true, default-features = false, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
ureq = { version = "2", optional = true }
url = { version = "2.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
serde_path_to_error = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = { version = "0.4.0", optional = true }

[dev-dependencies]
hex = "0.4"
hmac = "0.11"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.6.3"
