[package]
name = "oauth-github-app"
version = "0.1.0"
authors = ["Oemer Genc <oemer.genc@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.2"
rand = "0.8"

reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
url = { version = "2.1", features = ["serde"] }
