[package]
name = "oauth-github-rust-example"
version = "0.1.0"
authors = ["Oemer Genc <oemer.genc@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.1", features = ["serde"] }
